[gd_scene load_steps=12 format=3 uid="uid://ca6sxsibqlyef"]

[ext_resource type="Script" path="res://scripts/enemy_1.gd" id="1_ww31q"]
[ext_resource type="Texture2D" uid="uid://d1df8ojeg4vaq" path="res://resources/kenney_space-shooter-redux/PNG/Enemies/enemyRed1.png" id="2_ywix3"]
[ext_resource type="PackedScene" uid="uid://dpm6hiryffgjp" path="res://scenes/life_bar.tscn" id="3_0fnij"]
[ext_resource type="Texture2D" uid="uid://bv6hdeoiy2vte" path="res://resources/kenney_particle_pack/fire_02.png" id="4_s66dr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2h81d"]
radius = 9.05539

[sub_resource type="Gradient" id="Gradient_nkwa4"]
offsets = PackedFloat32Array(0, 0.622951, 1)
colors = PackedColorArray(1, 1, 0, 1, 1, 0, 0, 0.713726, 1, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gpudh"]
gradient = SubResource("Gradient_nkwa4")

[sub_resource type="Curve" id="Curve_c680a"]
_data = [Vector2(0, 0.153846), 0.0, 0.0, 0, 0, Vector2(0.306667, 1), 0.0, 0.0, 0, 0, Vector2(0.62, 0.582418), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_rslk7"]
curve = SubResource("Curve_c680a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kcdva"]
particle_flag_disable_z = true
angle_min = -90.0
angle_max = 90.0
gravity = Vector3(0, 0, 0)
scale_min = 0.01
scale_max = 0.1
scale_curve = SubResource("CurveTexture_rslk7")
color_ramp = SubResource("GradientTexture1D_gpudh")

[sub_resource type="CircleShape2D" id="CircleShape2D_o5b0c"]

[node name="Enemy_1" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_ww31q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2h81d")

[node name="Ship" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Ship"]
position = Vector2(-5.96046e-08, 2.98023e-08)
scale = Vector2(0.253562, 0.244345)
texture = ExtResource("2_ywix3")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Ship"]
position = Vector2(0, -11)
amount = 10
process_material = SubResource("ParticleProcessMaterial_kcdva")
texture = ExtResource("4_s66dr")
fixed_fps = 60

[node name="ResizeTimer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="LifeBar" parent="." instance=ExtResource("3_0fnij")]
offset_top = -25.0
offset_bottom = -19.0

[node name="HitBox" type="Area2D" parent="." groups=["Enemy"]]

[node name="HitBoxCollisionShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_o5b0c")

[connection signal="timeout" from="ResizeTimer" to="." method="_on_resize_timer_timeout"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
